--- a/src/2025-08-13-ISR-01.tex
+++ b/src/2025-08-13-ISR-01.tex
@@ -3,6 +3,8 @@
 
 \documentclass{gs}
 
+\usepackage{../lib/apf}
+
 \title{il sogno radicale}
 \subtitle{autobiografia di un eretico. appunti.}
 \author{Giuseppe Silvi}
@@ -27,43 +29,117 @@
 Sto operando quella che Ronchi, nella prefazione de \emph{il pensiero bastardo} \cite{ronchi2001} ha definito una \emph{«torsione»}, una \emph{«preliminare torsione filosofica»} dell'oggetto.
 
 \begin{quote}
-Le altre pratiche (pittura, fotografia, cinema, ecc.) sono chiamate in causa solo al prezzo di una preliminare torsione filosofica del loro oggetto.
+  Le altre pratiche (pittura, fotografia, cinema, ecc.) sono chiamate in causa solo al prezzo di una preliminare torsione filosofica del loro oggetto. \cite{ronchi2001}
 \end{quote}
 
-La forma latina \textit{torsiō} deriva dal verbo \textit{torquēre}, riconducibile alla radice indoeuropea *terkʷ- “torcere, girare”\footnote{Pokorny IEW 1077-1078; de Vaan EDLIL 621-622.}, che designa il movimento rotatorio applicato mediante forza. La torsione implica una tensione, una resistenza, un'opposizione interna che genera forma. Un doppio moto. 
+La forma latina \textit{torsiō} deriva dal verbo \textit{torquēre}, riconducibile alla radice indoeuropea *terkʷ- “torcere, girare”\footnote{Pokorny IEW 1077-1078; de Vaan EDLIL 621-622.}, che designa il movimento rotatorio applicato mediante forza. La torsione implica una tensione\footnote{La torsione genera tensioni di taglio (\emph{shear stress}) nel materiale. Queste tensioni sono distribuite trasversalmente alla sezione e aumentano linearmente dalla fibra neutra verso la periferia. Dal latino \emph{tensio}, da \emph{tendere}, pro-tendere qualcosa verso; un orientamento attivo.}, una resistenza\footnote{Il materiale oppone una resistenza caratterizzata dal modulo di elasticità tangenziale e dal momento d'inerzia polare della sezione. Dal latino \emph{re-sistere}: uno \emph{stare contro} che è inevitabilmente anche \emph{stare di nuovo} - un ristabilirsi, un tornare a stare.}. Un \emph{ob-ponere} che dura in un \emph{ob-sidere} che genera forma, movimento. Un doppio moto – di deformazione sotto l'azione del momento torcente applicato; di ritorno sotto l'azione di resistenza elastica ad un altro momento\footnote{Il termine momento indica sia l'istante temporale che la grandezza fisica (momento torcente), suggerendo come ogni deformazione sia sempre un dialogo tra forza e tempo, tra imposizione e memoria del materiale}.
 
-Mi è evidente che c'è un passo della torsione, quello successivo, che conduce alla \emph{distorsione}. %Magari della realtà.
-Tuttavia, seppur con questo breve pensiero sto cercando di tenermene a distanza, un passo prima, in torsione non si può avere paura delle distorsioni poiché questa impedirebbe possibili \emph{contorsioni} (dialettiche). È se anche il Prof. Ronchi intendesse indicare una qualsiasi deviazione rispetto a una condizione di normalità o linearità (la torsione di un ragionamento, di una interpretazione, di una situazione), cosa che io dubito, ormai mi son mosso.
+\begin{figure}[htbp]
+\begin{center}
+\begin{tikzpicture}
+  \tikzstyle{every node}=[font=\small]
+  \ciclodiagram{torsione}{tensione}{resistenza}
+\end{tikzpicture}
+\caption{default}
+\label{default}
+\end{center}
+\end{figure}
 
-Sento un'assenza. Mi accorgo, quotidianamente, da un certo tempo, a seguito di alcune singole riflessioni, seppur non isolate, di desiderare, di avere necessità di \emph{abitare} una teoria della musica. Non è un bisogno, momentaneo e transitorio, bensì l'inevitabile presenza di un'assenza, costante. Molte delle singole riflessioni, delle risonanze singolari, vorrebbero appartenere a un riverbero, a riverberi generali: che chiamerei \emph{teoria della musica}. 
+Mi è evidente che c'è un passo della torsione, quello successivo, che conduce alla \emph{dis-torsione}. %Magari della realtà.
+Tuttavia, seppur con questo breve pensiero cerco di tenermene a distanza, un passo prima, mi è altresì evidente che in torsione non si può avere paura delle distorsioni poiché queste impedirebbero possibili \emph{contorsioni} (dialettiche). È se anche il Prof. Ronchi intendesse indicare una qualsiasi deviazione rispetto a una condizione di normalità o linearità (la torsione di un ragionamento, di una interpretazione, di una situazione), cosa che io dubito, ormai mi son mosso.
+
+Sento un'assenza. Mi accorgo, quotidianamente, da un certo tempo, a seguito di alcune singole riflessioni, seppur non isolate, di desiderare, di avere necessità di \emph{abitare} una teoria della musica. Non è un bisogno, momentaneo e transitorio, bensì l'inevitabile presenza di un'assenza, costante. Molte delle singole riflessioni, delle risonanze singolari, vorrebbero appartenere a un riverbero, a riverberi generali di un luogo più ampio che chiamerei \emph{teoria della musica}. 
 
 \begin{quote}
-La teoria è infatti chiamata in causa, dopotutto, solo per far luce su di un'esperienza di cui non si riesce a venire a capo. 
+  La teoria è infatti chiamata in causa, dopotutto, solo per far luce su di un'esperienza di cui non si riesce a venire a capo. \cite{ronchi2001}
 \end{quote}
 
 Abitare una teoria. Tuttavia, \emph{che cos'è una teoria? Che cos'è una teoria musicale? E santo cielo! Che cos'è Musica?}
 
-Heidegger, che amava le torsioni, in un ragionamento sull'abitare \cite{heidegger1991} si muove da un primo passo «All'abitare, così sembra, perveniamo solo attraverso il costruire». Ma noi siamo in piena «crisi di alloggi». Attorno, mi guardo intorno, osservo il mio ambiente e vedo pochissime costruzioni che «albergano l'uomo», il musicista. «Il costruire non è soltanto mezzo e via per l'abitare, il costruire è già in se stesso un abitare.» Per questo motivo festeggio la mia torsione, festeggio con una danza tra necessità e creazione, per sentirmi a casa. 
+Heidegger, che mi pare amasse le torsioni, in un ragionamento sull'abitare \cite{heidegger1991} si muove da un primo passo «All'abitare, così sembra, perveniamo solo attraverso il costruire». Ma noi, in musica, oggi, siamo in piena «crisi di alloggi». Osservo l'ambiente che mi circonda e vedo pochissime costruzioni che «albergano l'uomo», il musicista. Per imparare ad avere rispetto della mia ineluttabile necessità scorro la storia delle teorie della musica, un indice che si muove più volte avanti e dietro, non in cerca di regole, definizioni di una o più problematiche specifiche, ma in cerca di divergenze, di attitudini, di problematiche generali affinché io possa, con semplicità trovare radici per le mie problematiche specifiche, per le utopie che muovono le mani. «Il costruire non è soltanto mezzo e via per l'abitare, il costruire è già in se stesso un abitare.» \cite{heidegger1991} %Per questo motivo festeggio la mia torsione, festeggio con una danza tra necessità e creazione, per sentirmi a casa. 
 
-Questo è il mio luogo riverberante.
+\subsection*{\emph{théatron}: luogo riverberante}
 
 \begin{quote}
-Spazi vuoti pronti a venirsi\\
-riempiendo uno alla volta, spazi della\\
-voce nei quali si apprenderà con l'udito\ldots
+\ldots spazi vuoti pronti a venirsi riempiendo uno alla volta, spazi della voce nei quali si apprenderà con l'udito\ldots~\cite{zambrano1991}
 \end{quote}
 
-Il \emph{théatron} messo in piedi per (\emph{theáomai}) questa torsione è un teatro acustico, poiché la regione in cui si sta organizzando l'assedio non è, se non in contingenza, la conoscenza della visione, ma la conoscenza dell'udito. È sì che si torce: \emph{theōría}: guardare, osservare e il risultato di tutto ciò: ma a occhi chiusi, spegnendo l'immagine. \emph{Theáomai} sì, spettatore di altra natura, di altro \emph{théatron}. Della visione attenta, della contemplazione, tratteniamo la postura, la partecipazione intellettuale. Osservatori ufficiali inviati ad assistere alla festa del suono, a consultare l'oracolo che chiamiamo musica, a a riferirne ciò ch'è stato udito, sentito, appreso.  L'osservare con le orecchie è a sua volta una torsione, una con-torsione (dialettica) dell'ascoltare nelle due direzioni opposte e convergenti dell'udire e del sentire. 
+Il \emph{théatron} messo in piedi per (\emph{theáomai}) questa torsione è un teatro acustico, poiché la regione in cui si sta organizzando l'assedio è la conoscenza dell'udire. È sì che si torce: \emph{theōría}: guardare, osservare e il risultato di tutto ciò: ma a occhi chiusi, spegnendo l'immagine. \emph{Theáomai} sì, ma spettatore di altra natura, di altro \emph{théatron}. Della visione attenta, della contemplazione, tratteniamo la postura, la partecipazione intellettuale. Osservatori ufficiali inviati ad assistere alla festa del suono, a consultare l'oracolo che chiamiamo musica, a riferirne ciò ch'è stato udito, sentito, appreso.  L'osservare con le orecchie è a sua volta una torsione, una con-torsione (dialettica) dell'ascoltare nelle due direzioni opposte e convergenti dell'udire e del sentire.
 
-Lo spazio agonistico di questo guardare (\emph{theōría}) è uno spazio della vibrazione, un tempo della vibrazione, uno spazio dei suoni: un \concetto{sonario}. 
+\begin{figure}[htbp]
+\begin{center}
+\begin{tikzpicture}
+  \tikzstyle{every node}=[font=\small]
+  \ciclodiagram{ascoltare}{udire}{sentire}
+\end{tikzpicture}
+\caption{default}
+\label{default}
+\end{center}
+\end{figure}
 
-Così si vuole raccontare una storia parallela. Al fianco del "vedere"-"comprendere" che riflette la concezione classica della conoscenza come visione intellegibile che pervade tutto il vocabolario epistemologico occidentale (idee, evidenza, intuizione\ldots) la storia che si vuole raccontare ha origini antichissime, come la visione, con lo stesso dualismo dialettico agonismo, tra teorico e pratico, con lo stesso desiderio di attraversare la scolastica medievale e giungere fino alla modernità musicale dove \emph{theōría} - ha acquisito o acquisì - significato tecnico scientifico di sistema coerente di principi che spiegano un insieme di fenomeni.
+Lo spazio agonistico \cite{ronchi2001} di questo ascoltare (\emph{theōría}) è uno spazio della vibrazione acustica udibile, un tempo della vibrazione, uno spazio dei suoni: un \concetto{sonario}. 
+
+\subsection*{sonario}
+
+Si vuole raccontare una storia. Al fianco del \emph{vedere-comprendere} che riflette la concezione classica della conoscenza come visione intellegibile che pervade tutto il vocabolario epistemologico occidentale (idee, evidenza, intuizione, immaginazione\ldots) la storia che si vuole raccontare ha origini antichissime, come la visione, con lo stesso dualismo dialettico agonistico tra teorico e pratico, con lo stesso eterno desiderio di giungere alla \emph{theōría} con quel significato tecnico scientifico di sistema coerente di principi che spiegano un insieme di fenomeni. Così, si vuole raccontare una storia dell'esperienza musicale.
+
+\begin{quote}
+we have to perceive what is coming to be and remember what has come to be. There is no other way of following the contents of music\footnote{Aristosseno, Elementa Harmonica, book II, 38–39. Traduzione in \emph{The Stanford Encyclopedia of Philosophy}}
+\end{quote}
+
+Mi pare che Aristosseno attivi, come il suo Maestro Aristotele, quell'\emph{agōn} \cite{ronchi2001} tra la volpe Teumessia (sensazione) e il cane Cefalo (memoria), in quel \emph{per sempre avere luogo} della rappresentazione istantanea della coesistenza tra sensazione e memoria, che chiamiamo \emph{musica}.
+
+La storia, quindi, sottolinea la dimensione temporale della coscienza musicale, ovvero la percezione di ciò che \emph{è diventato} (orientata al passato) e il ricordo di ciò che \emph{sta per diventare} (orientato al futuro).
+
+\begin{figure}[htbp]
+\begin{center}
+\begin{tikzpicture}
+  \tikzstyle{every node}=[font=\small]
+  \ciclodiagram{coscienza musicale}{sensazione}{memoria}
+\end{tikzpicture}
+\caption{default}
+\label{default}
+\end{center}
+\end{figure}
+
+\begin{description}
+
+  \item[Glossario] Dal latino tardo \emph{glossarium}, derivato da \emph{glossa} (parola rara o straniera che necessita spiegazione), a sua volta dal greco \textgreek{γλῶσσα} (glōssa) che significa "lingua" o "linguaggio".
+Raccolta di termini specifici di una disciplina, ordinati alfabeticamente e corredati di definizione. Originariamente era una raccolta di termini difficili o arcaici (\emph{glossae}) con relative spiegazioni.
+
+  \item[Immaginario] Dal latino \emph{imaginarius} (che esiste solo nell'immaginazione), derivato da \emph{imago, imaginis} (immagine, rappresentazione), connesso alla radice indoeuropea \emph{im-} (copiare, imitare).
+Come sostantivo, indica l'insieme delle immagini, dei simboli e delle rappresentazioni mentali condivise da una cultura o da un individuo. È il luogo concettuale dove risiedono le immagini che costituiscono il nostro modo di vedere e interpretare il mondo.
+
+  \item[Scenario] Dal tardo latino \emph{scenarium}, derivato da \emph{scena} (palcoscenico, scena teatrale), che proviene dal greco \textgreek{σκηνή} (skēnē), originariamente "tenda, riparo" poi "palcoscenico".
+Inizialmente indicava l'insieme delle scene di una rappresentazione teatrale. Per estensione, oggi denota la descrizione di una possibile sequenza di eventi o sviluppi futuri, o l'ambientazione in cui si svolge un'azione.
+
+\end{description}
+
+Come il glossario raccoglie e definisce le parole, l'immaginario accoglie e struttura le immagini, lo scenario esemplifica lo spazio delle scene, sia esso verticale (coesistenza) che orizzontale (successione) così il \emph{sonario} diventa il ricettacolo ontologico dei fenomeni sonori, in relazione all'ascolto, alla creazione e alla riflessione umana.
+
+\begin{description}
+
+  \item[Sonario] Dal latino \emph{sonus} (suono) con il suffisso \emph{-arium} che indica raccolta, contenitore o luogo dedicato. Il \emph{Sonario} è lo spazio agonistico della ragione acustica che si fa metodo nella coscienza musicale, il \emph{théatron} dove il suono si fa interfaccia teorico-pratica – dove \textgreek{θεωρία}, \textgreek{πρᾶξις} e \textgreek{ποίησις} si dispiegano.
+
+\end{description}
 
 \emph{Theōría}, l'attività d'osservazione attenta e contemplativa (in musica: \emph{ascolto}) che si relaziona con la \emph{praxis} condotta strumento alla mano, come questa penna stilografica, e che adduce alla \emph{poiesis}: la musica.
 
 Per Aristotele questo spazio agonistico è tripartito in \emph{bios theoretikos, bios praktikos, bios poietikos}. All'interno della visione di questa \emph{theōría} diviene
 
-poiesis(praxis,theoria)
+\begin{figure}[htbp]
+\begin{center}
+\begin{tikzpicture}
+  \tikzstyle{every node}=[font=\small]
+  \ciclodiagram{ποίησις}{πράξις}{θεωρία}
+\end{tikzpicture}
+\caption{default}
+\label{default}
+\end{center}
+\end{figure}
+
+
+
 
 
 %Il termine \etimologia{filosofia}{greco φιλοσοφία, “amore per la sapienza”} rappresenta la ricerca fondamentale dell'essere umano verso la comprensione del mondo e di se stesso.
@@ -85,6 +161,8 @@ poiesis(praxis,theoria)
 %\section{Conclusioni}
 %
 %L'approccio filosofico che considera l'\etimologia{etimologia}{greco ἐτυμολογία, "studio del vero significato"} come strumento di comprensione concettuale si rivela particolarmente fruttuoso nello studio del pensiero antico.
+
+\clearpage
 
 % Nel documento
 \printbibliography
