--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -1,18 +1,46 @@
+% Bibliografia per "Il sogno radicale - Autobiografia di un eretico"
+
 @book{ronchi2001,
     author = {Ronchi, Rocco},
     title = {Il pensiero bastardo},
     subtitle = {Figurazione dell'invisibile e comunicazione indiretta},
     publisher = {Christian Marinotti Edizioni},
     year = {2001},
-    address = {},
+    address = {Milano},
     isbn = {88-8273-023-9},
     pages = {346},
-    note = {Il pensiero dell'arte 2}
+    series = {Il pensiero dell'arte},
+    number = {2}
 }
 
 @book{heidegger1991,
     author = {Heidegger, Martin},
     title = {Saggi e discorsi},
+    originaltitle = {Vorträge und Aufsätze},
+    translator = {Gianni Vattimo},
     publisher = {Mursia},
-    year = {1991}
+    year = {1991},
+    address = {Milano},
+    pages = {286}
+}
+
+@book{zambrano1991,
+    author = {Zambrano, María},
+    title = {Chiari del bosco},
+    originaltitle = {Claros del bosque},
+    translator = {Carlo Ferrucci},
+    publisher = {SE},
+    year = {1991},
+    address = {Milano},
+    pages = {192}
+}
+
+@book{agamben2019,
+    author = {Agamben, Giorgio},
+    title = {Il tempo del pensiero},
+    publisher = {Nottetempo},
+    year = {2019},
+    address = {Milano},
+    pages = {144},
+    isbn = {978-88-7452-912-7}
 }
