--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -44,3 +44,59 @@
     pages = {144},
     isbn = {978-88-7452-912-7}
 }
+
+@book{sachs1996,
+    author = {Sachs, Curt},
+    title = {Storia degli strumenti musicali},
+    originaltitle = {The History of Musical Instruments},
+    publisher = {Mondadori},
+    year = {1996},
+    address = {Milano},
+    series = {Oscar saggi},
+    isbn = {978-88-04-40744-7},
+    note = {Con introduzione di Luca Cerchiari. Prima edizione italiana 1980}
+}
+
+@misc{silvi2023a,
+    author = {Silvi, Giuseppe},
+    title = {perché siete qui?},
+    subtitle = {lettura fantastica agli esiti di un concerto},
+    year = {2023},
+    month = {12},
+    day = {14},
+    url = {https://gitlab.com/giuseppesilvi/perche-siete-qui},
+    note = {LEAP - Laboratorio ElettroAcustico Permanente},
+    pages = {5}
+}
+
+@misc{silvi2024,
+    author = {Silvi, Giuseppe},
+    title = {appunti},
+    subtitle = {metafisica della musica},
+    year = {2024},
+    month = {3},
+    day = {6},
+    url = {https://gitlab.com/giuseppesilvi/appunti-metafisica-musica},
+    pages = {1}
+}
+
+@misc{silvi2023b,
+    author = {Silvi, Giuseppe},
+    title = {integro, solido},
+    year = {2023},
+    month = {9},
+    day = {21},
+    url = {https://gitlab.com/giuseppesilvi/integro-solido},
+    pages = {1}
+}
+
+@misc{silvi2023c,
+    author = {Silvi, Giuseppe},
+    title = {leapiani di tutti i paesi, unitevi!},
+    year = {2023},
+    month = {12},
+    day = {29},
+    url = {https://gitlab.com/giuseppesilvi/lettera-leapiani},
+    note = {Lettera programmatica per le attività LEAP 2024},
+    pages = {1}
+}
