--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -1,4 +1,144 @@
 % Bibliografia per "Il sogno radicale - Autobiografia di un eretico"
+@book{agamben2008che,
+  title={Che cos'{\`e} il contemporaneo?},
+  author={Agamben, G.},
+  series={I sassi},
+  year={2008},
+  publisher={Nottetempo}
+}
+
+@book{agamben2017,
+    author = {Agamben, Giorgio},
+    title = {Creazione e anarchia},
+    subtitle = {L'opera nell'età della religione capitalista},
+    publisher = {Neri Pozza},
+    year = {2017},
+    address = {Vicenza},
+    pages = {139},
+    series = {Piccola biblioteca Neri Pozza},
+    isbn = {978-88-5451-560-4}
+}
+
+@book{agamben2019,
+    author = {Agamben, Giorgio},
+    title = {Il tempo del pensiero},
+    publisher = {Nottetempo},
+    year = {2019},
+    address = {Milano},
+    pages = {144},
+    isbn = {978-88-7452-912-7}
+}
+
+@book{bergson1896,
+  author = {Henri Bergson},
+  title = {Materia e memoria. Saggio sulla relazione tra il corpo e lo spirito},
+  year = {2013},
+  publisher = {Laterza},
+  address = {Roma-Bari},
+  note = {Ed. originale: Matière et mémoire, 1896}
+}
+
+@book{jlb:finzioni,
+  title={Finzioni},
+  author={Borges, Jorge Luis},
+  year={1955},
+  series={Nuovi Coralli 214},
+  publisher={Einaudi}
+}
+
+@book{branchi1977tecnologia,
+  title={Tecnologia della musica elettronica},
+  author={Branchi, Walter},
+  year={1977},
+  publisher={Lerici}
+}
+
+@Misc{Cacciari1995,
+  author = {Cacciari, Massimo},
+  title  = {Silenzio e ascolto nella musica di {L}uigi {N}ono},
+  year   = {1995},
+  url    = {https://youtu.be/ueA8xVE5WV8},
+}
+
+@book{deleuze2009,
+    author = {Deleuze, Gilles},
+    title = {Che cos'è l'atto di creazione?},
+    editor = {Moscati, Antonella},
+    publisher = {Cronopio},
+    year = {2009},
+    address = {Napoli},
+    pages = {64},
+    series = {Tessere},
+    isbn = {978-88-8944-656-0}
+}
+
+@article{diScipio2003,
+  author = {Agostino di Scipio},
+  title = {Sound is the interface: from interactive to ecosystemic signal processing},
+  journal = {Organised Sound},
+  year = {2003},
+  volume = {8},
+  number = {3},
+  pages = {269--277}
+}
+
+@book{mf:istinto,
+  author = {Fagioli, Massimo},
+  title = {Istinto di morte e conoscenza},
+  publisher = {L'asino D'oro},
+  year = {1972}
+}
+
+@book{vonfoerster1981,
+  author = {Heinz von Foerster},
+  title = {Sistemi che osservano},
+  year = {1987},
+  publisher = {Astrolabio},
+  address = {Roma},
+  note = {Ed. originale: Observing Systems, 1981}
+}
+
+@InCollection{mf:left2008,
+  author = {Fagioli, Massimo},
+  booktitle = {Left},
+  title = {Il male è l’anaffettività. La mano che crea la linea è fantasia di sparizione ovvero immagine.},
+  publisher = {L'asino D'oro},
+  year = {2008}
+}
+
+@book{ferraris2014,
+  title={Documentalit{\`a}: Perch{\'e} {\`e} necessario lasciar tracce},
+  author={Ferraris, Maurizio},
+  isbn={9788858111895},
+  series={Biblioteca Universale Laterza},
+  year={2014},
+  publisher={Editori Laterza}
+}
+
+@book{ag:matst,
+  author = {Gramsci, Antonio},
+  title = {Il Materialismo Storico e la Filosofia di Benedetto Croce},
+  publisher = {Einaudi},
+  year = {1948}
+}
+
+@book{heidegger1991,
+    author = {Heidegger, Martin},
+    title = {Saggi e discorsi},
+    originaltitle = {Vorträge und Aufsätze},
+    translator = {Gianni Vattimo},
+    publisher = {Mursia},
+    year = {1991},
+    address = {Milano},
+    pages = {286}
+}
+
+@Misc{netti23,
+  author = {Netti, Giorgio},
+  title  = {Che cos'è uno strumento},
+  year   = {2023},
+  url    = {https://youtu.be/CoSVrkYYo3w},
+}
 
 @book{ronchi2001,
     author = {Ronchi, Rocco},
@@ -13,38 +153,6 @@
     number = {2}
 }
 
-@book{heidegger1991,
-    author = {Heidegger, Martin},
-    title = {Saggi e discorsi},
-    originaltitle = {Vorträge und Aufsätze},
-    translator = {Gianni Vattimo},
-    publisher = {Mursia},
-    year = {1991},
-    address = {Milano},
-    pages = {286}
-}
-
-@book{zambrano1991,
-    author = {Zambrano, María},
-    title = {Chiari del bosco},
-    originaltitle = {Claros del bosque},
-    translator = {Carlo Ferrucci},
-    publisher = {SE},
-    year = {1991},
-    address = {Milano},
-    pages = {192}
-}
-
-@book{agamben2019,
-    author = {Agamben, Giorgio},
-    title = {Il tempo del pensiero},
-    publisher = {Nottetempo},
-    year = {2019},
-    address = {Milano},
-    pages = {144},
-    isbn = {978-88-7452-912-7}
-}
-
 @book{sachs1996,
     author = {Sachs, Curt},
     title = {Storia degli strumenti musicali},
@@ -55,6 +163,14 @@
     series = {Oscar saggi},
     isbn = {978-88-04-40744-7},
     note = {Con introduzione di Luca Cerchiari. Prima edizione italiana 1980}
+}
+
+@book{jps:immaginario,
+   title =     {L'immaginario. Psicologia fenomenologica dell'immaginazione},
+   author =    {Jean-Paul Sartre, Raoul Kirchmayr (editor)},
+   publisher = {Einaudi},
+   year =      {2007},
+   series =    {Piccola biblioteca Einaudi. Filosofia}
 }
 
 @misc{silvi2023a,
@@ -69,15 +185,13 @@
     pages = {5}
 }
 
-@misc{silvi2024,
-    author = {Silvi, Giuseppe},
-    title = {appunti},
-    subtitle = {metafisica della musica},
-    year = {2024},
-    month = {3},
-    day = {6},
-    url = {https://gitlab.com/giuseppesilvi/appunti-metafisica-musica},
-    pages = {1}
+@Book{schonberg1970,
+  author    = {Sch{\"o}nberg, A. and Rognoni, L. and Manzoni, G.},
+  publisher = {Il Saggiatore Tascabili},
+  title     = {Manuale di armonia},
+  year      = {2008},
+  isbn      = {9788856500349},
+  series    = {Saggi. Tascabili}
 }
 
 @misc{silvi2023b,
@@ -99,4 +213,33 @@
     url = {https://gitlab.com/giuseppesilvi/lettera-leapiani},
     note = {Lettera programmatica per le attività LEAP 2024},
     pages = {1}
+}
+
+@misc{silvi2024,
+    author = {Silvi, Giuseppe},
+    title = {appunti},
+    subtitle = {metafisica della musica},
+    year = {2024},
+    month = {3},
+    day = {6},
+    url = {https://gitlab.com/giuseppesilvi/appunti-metafisica-musica},
+    pages = {1}
+}
+
+@book{stefani,
+  title={Musica: dall'esperienza alla teoria},
+  author={Stefani, Gino},
+  year={1998},
+  publisher={Casa Ricordi}
+}
+
+@book{zambrano1991,
+    author = {Zambrano, María},
+    title = {Chiari del bosco},
+    originaltitle = {Claros del bosque},
+    translator = {Carlo Ferrucci},
+    publisher = {SE},
+    year = {1991},
+    address = {Milano},
+    pages = {192}
 }
