--- a/src/v01/2025-08-13-ISR-01.tex
+++ b/src/v01/2025-08-13-ISR-01.tex
@@ -11,7 +11,7 @@
 \usepackage{../lib/apf}
 
 \title{il sogno radicale}
-\subtitle{autobiografia di un eretico. appunti.}
+\subtitle{autobiografia di un eretico. appunti reva.}
 \author{Giuseppe Silvi}
 \date{\today}
 
@@ -22,7 +22,7 @@
 \kquattro{etimologia}
 \kcinque{XeLaTeX}
 
-% Nel preambolo del .tex
+%\usepackage[backend=bibtex,style=numeric]{biblatex}
 \addbibresource{bibliografia.bib}
 
 \begin{document}
@@ -187,14 +187,14 @@ L'archeologia è la ricerca di un archē, usa il termine greco archē ha due sig
 
 Archeologia del fascino che accompagna l'apparizione. e nell'apparire si lega insieme all'apparizione, come una fase che vincola e attrae irresistibilmente. l'archeologia del fascino mantiene l'idea di un potere che opera al di là della volontà razionale, en archei, il potere di un comando.
 
-«qualcosa appare a partire da se stesso» GAITP
+«qualcosa appare a partire da se stesso» \cite{agamben2019}
 
 Apparire, mostrarsi, divenire visibile a partire da se stesso. È un ad – parēre, un movimento verso.
 
 \begin{quote}
 \begin{sf}
 \small
-Il presente, l'Anwesend, deve avermi già rivolto la parola nel suo essere presente.
+Il presente, l'Anwesend, deve avermi già rivolto la parola nel suo essere presente. \cite{agamben2019}
 \end{sf}
 \end{quote}
 
